--- a/flexa-backendnew-main/requirements.txt
+++ b/flexa-backendnew-main/requirements.txt
@@ -6,3 +6,7 @@ scikit-learn==1.5.2
 joblib==1.4.2
 pydantic==2.10.3
 python-multipart==0.0.12
+
+# RAG Dependencies (Test-Branch)
+chromadb==0.4.22
+sentence-transformers==2.3.1
